# matheel

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/: RELEASE_CHECKLIST.md
.github/ISSUE_TEMPLATE/: benchmark_evaluation.yml  bug_report.yml  documentation.yml  enhancement.yml  maintenance_release.yml  performance_ux.yml  test_improvement.yml
.github/workflows/: integration-tests.yml  pages.yml  publish.yml  sync-hf-space.yml  tests.yml
configs/: publication_ablations.json  publication_baselines.json  publication_cpu_c.json  publication_cpu_java.json
constraints/: py312.txt
docs/: README.md  chunking.md  code_metrics.md  comparison_suite.md  contributing_algorithms.md  contributing_datasets.md  customization.md  datasets.md  development.md  gradio.md  index.md  leaderboard.md  lexical.md  preprocessing.md  release_checklist.md  reproducible_benchmark.md  scoring.md  tokenization.md  usage.md  vectors.md  visualization.md
docs/releases/: v0.3.5.md
examples/: README.md  __init__.py  _sample_data.py  chunking_demo.py  code_metrics_demo.py  comparison_suite_demo.py  lexical_demo.py  matheel_examples_colab.ipynb  matheel_gradio_colab_demo.ipynb  preprocessing_demo.py  reproducible_benchmark_demo.py  sample_data.py  sample_pairs_demo.py  vectors_demo.py
examples/basic/: chunking_demo.py  code_metrics_demo.py  lexical_demo.py  preprocessing_demo.py  sample_pairs_demo.py  vectors_demo.py
examples/custom/: custom_algorithm_demo.py
examples/evaluation/: calibration_report_demo.py  comparison_suite_demo.py  dataset_validation_demo.py  datasets_demo.py  leaderboard_demo.py  threshold_tuning_demo.py  visualization_demo.py
examples/notebooks/: 01_core_workflows.ipynb  02_datasets_and_reproducibility.ipynb  03_custom_algorithms.ipynb  04_gradio_app.ipynb  05_visualization_and_leaderboard.ipynb  README.md
examples/runs/: basic_runs.json
gradio_app/: Matheel_Gradio_Notebook.ipynb  README.md  app.py  html_utils.py  matheel_gradio_colab_demo.ipynb  requirements.txt
gradio_app/assets/: ready_leaderboard.json
matheel/: __init__.py  _path_utils.py  _progress.py  _run_metadata.py  algorithms.py  benchmark_cache.py  benchmark_cards.py  benchmark_registry.py  calibration.py  chunking.py  cli.py  code_metrics.py  comparison_suite.py  custom_templates.py  dataset_validation.py  datasets.py  evaluation.py  feature_weights.py  leaderboard.py  leaderboard_presets.py  model_routing.py  native_codebleu.py  preprocessing.py  reports.py  reproducibility.py  resampling.py  similarity.py  vectors.py  visualization.py
scripts/: build_ready_leaderboard.py  check_pinned_matheel_release.py  sync_gradio_app_version.py
tests/: test_algorithms.py  test_benchmark_cache.py  test_benchmark_cards.py  test_calibration.py  test_chunking.py  test_cli.py  test_code_metrics.py  test_comparison_suite.py  test_datasets.py  test_evaluation.py  test_feature_weights.py  test_gradio_app.py  test_gradio_html_utils.py  test_gradio_version_sync.py  test_leaderboard.py  test_model_routing.py  test_notebooks.py  test_preprocessing.py  test_ready_leaderboard.py  test_real_models.py  test_reports.py  test_reproducibility.py  test_resampling.py  test_similarity.py  test_space_sync_release_check.py  test_vectors.py  test_visualization.py
