[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matheel"
version = "0.2.1"
authors = [
  { name = "Fahad Ebrahim" }
]
description = "Matheel: A CLI and Python package for source-code similarity detection."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "CC-BY-NC-4.0"

dependencies = [
    "click",
    "pandas",
    "numpy",
    "rapidfuzz",
    "sentence-transformers",
    "sentencepiece"
]

[project.optional-dependencies]
chunking = [
    "chonkie"
]
chunking_code = [
    "chonkie[code]"
]
metrics = []
model2vec = [
    "model2vec"
]
pylate = [
    "pylate"
]
gradio = [
    "gradio>=5,<6",
    "gradio-huggingfacehub-search==0.0.8"
]
dev = [
    "pytest>=8,<9"
]

[project.urls]
Homepage = "https://github.com/FahadEbrahim/matheel"
Source = "https://github.com/FahadEbrahim/matheel"

[project.scripts]
matheel = "matheel.cli:main"

[tool.setuptools.packages.find]
include = ["matheel*"]
exclude = ["gradio_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-model tests that use actual embedding backends and cached/downloaded model weights",
]
