[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matheel"
version = "0.3.1"
authors = [
  { name = "Fahad Ebrahim" }
]
description = "Matheel: A CLI and Python package for source-code similarity detection."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "CC-BY-NC-4.0"

dependencies = [
    "click>=8,<9",
    "pandas>=2.2,<3.1",
    "numpy>=2,<3",
    "rapidfuzz>=3,<4",
    "networkx>=3,<4",
    "tree-sitter-language-pack>=0.7,<0.8",
    "func-timeout>=4,<5",
    "sentence-transformers>=5.1,<5.2",
    "sentencepiece>=0.2,<0.3"
]

[project.optional-dependencies]
chunking = [
    "chonkie>=1.5,<1.6"
]
chunking_code = [
    "chonkie[code]>=1.5,<1.6"
]
metrics = [
    "apted>=1.0,<2",
    "bert-score>=0.3,<0.4"
]
model2vec = [
    "model2vec>=0.7,<0.8"
]
pylate = [
    "pylate>=1.4,<1.5"
]
gradio = [
    "gradio>=5,<6",
    "gradio-huggingfacehub-search==0.0.8"
]
all = [
    "chonkie[code]>=1.5,<1.6",
    "apted>=1.0,<2",
    "bert-score>=0.3,<0.4",
    "model2vec>=0.7,<0.8",
    "pylate>=1.4,<1.5",
    "gradio>=5,<6",
    "gradio-huggingfacehub-search==0.0.8"
]
dev = [
    "pytest>=8,<9",
    "build>=1,<2",
    "twine>=6,<7"
]

[project.urls]
Homepage = "https://github.com/FahadEbrahim/matheel"
Source = "https://github.com/FahadEbrahim/matheel"

[project.scripts]
matheel = "matheel.cli:main"

[tool.setuptools.packages.find]
include = ["matheel*"]
exclude = ["gradio_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-model tests that use actual embedding backends and cached/downloaded model weights",
]
