[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matheel"
version = "0.5.3"
authors = [
  { name = "Fahad Ebrahim" }
]
description = "Matheel: A CLI and Python package for source-code similarity detection."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8,<9",
    "pandas>=2.2,<3.1",
    "numpy>=2,<3",
    "rapidfuzz>=3,<4",
    "networkx>=3,<4",
    "tqdm>=4,<5",
    # 1.x currently has limited wheel coverage across the supported Python matrix.
    "tree-sitter-language-pack>=0.7,<0.8",
    "func-timeout>=4,<5"
]

[project.optional-dependencies]
chunking = [
    "chonkie>=1.5,<1.7"
]
chunking_code = [
    "chonkie[code]>=1.5,<1.7"
]
metrics = [
    "apted>=1.0,<2",
    "bert-score>=0.3,<0.4"
]
sentence_transformers = [
    "sentence-transformers>=5.1,<5.2",
    "sentencepiece>=0.2,<0.3"
]
model2vec = [
    "model2vec>=0.7,<0.9"
]
pylate = [
    # PyLate 1.4 pins sentence-transformers==5.1.1.
    "sentence-transformers>=5.1,<5.2",
    "sentencepiece>=0.2,<0.3",
    "pylate>=1.4,<1.5"
]
semantic = [
    # PyLate 1.4 pins sentence-transformers==5.1.1.
    "sentence-transformers>=5.1,<5.2",
    "sentencepiece>=0.2,<0.3",
    "model2vec>=0.7,<0.9",
    "pylate>=1.4,<1.5"
]
gradio = [
    "sentence-transformers>=5.1,<5.2",
    "sentencepiece>=0.2,<0.3",
    # gradio-huggingfacehub-search 0.0.x requires Gradio <6.
    "gradio>=5,<6",
    "gradio-huggingfacehub-search>=0.0.8,<0.1"
]
visualization = [
    "umap-learn>=0.5,<0.6"
]
all = [
    "chonkie[code]>=1.5,<1.7",
    "apted>=1.0,<2",
    "bert-score>=0.3,<0.4",
    # PyLate 1.4 pins sentence-transformers==5.1.1.
    "sentence-transformers>=5.1,<5.2",
    "sentencepiece>=0.2,<0.3",
    "model2vec>=0.7,<0.9",
    "pylate>=1.4,<1.5",
    "umap-learn>=0.5,<0.6",
    # gradio-huggingfacehub-search 0.0.x requires Gradio <6.
    "gradio>=5,<6",
    "gradio-huggingfacehub-search>=0.0.8,<0.1"
]
dev = [
    "pytest>=8,<10",
    "ruff>=0.15,<0.16",
    "build>=1,<2",
    "twine>=6,<7"
]

[project.urls]
Homepage = "https://github.com/FahadEbrahim/matheel"
Source = "https://github.com/FahadEbrahim/matheel"

[project.scripts]
matheel = "matheel.cli:main"

[tool.setuptools.packages.find]
include = ["matheel*"]
exclude = ["gradio_app*"]

[tool.pytest.ini_options]
addopts = ["-m", "not integration"]
testpaths = ["tests"]
markers = [
    "integration: real-model tests that use actual embedding backends and cached/downloaded model weights",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "*.ipynb",
]

[tool.ruff.lint.per-file-ignores]
"gradio_app/app.py" = ["E402"]
